--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
 export(outcome_bin_logistic)
+export(outcome_cont_normal)
 export(outcome_surv_exponential)
 export(outcome_surv_weibull_ph)
 export(plot)
