--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Description: `psborrow2` is an R package for complex, innovative trial designs u
    other trial and borrowing characteristics (e.g. sample size, covariates) in
    a unified way; and second, `psborrow2` provides a user-friendly interface for applying BDB
    on the study results handles the MCMC sampling on behalf of the user.
+URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/
+BugReports: https://github.com/Genentech/psborrow2/issues
 License: Apache License (>= 2)
 Encoding: UTF-8
 Depends:
@@ -110,13 +112,14 @@ Collate:
     'make_model_string_transf_params.R'
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
+    'prior_half_cauchy.R'
+    'outcome_cont_normal.R'
     'package.R'
     'prepare_stan_data_inputs.R'
     'prior_bernoulli.R'
     'prior_beta.R'
     'prior_cauchy.R'
     'prior_gamma.R'
-    'prior_half_cauchy.R'
     'prior_half_normal.R'
     'prior_poisson.R'
     'sim_covariates.R'
