--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -88,6 +88,7 @@ Collate:
     'borrowing_details.R'
     'borrowing_full.R'
     'borrowing_hierarchical_commensurate.R'
+    'borrowing_none.R'
     'check_data_matrix_has_columns.R'
     'cmdstan.R'
     'create_analysis_obj.R'
@@ -114,7 +115,6 @@ Collate:
     'make_model_string_transf_params.R'
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
-    'no_borrowing.R'
     'prior_half_cauchy.R'
     'outcome_cont_normal.R'
     'package.R'
