--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,11 +23,11 @@ Authors@R: c(
       )
    )
 Description: `psborrow2` is an R package for complex, innovative trial designs using
-   Bayesian dynamic borrowing (BDB). `psborrow2` has two main goals:
+   Bayesian dynamic borrowing using the hierarchical commensurate prior approach. `psborrow2` has two main goals:
    First, `psborrow2` facilitates simulation studies that compare different borrowing
    parameters (e.g. full borrowing, no borrowing, dynamic borrowing) and
    other trial and borrowing characteristics (e.g. sample size, covariates) in
-   a unified way; and second, `psborrow2` provides a user-friendly interface for applying BDB
+   a unified way; and second, `psborrow2` provides a user-friendly interface for applying dynamic borrowing
    on the study results handles the MCMC sampling on behalf of the user.
 URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/
 BugReports: https://github.com/Genentech/psborrow2/issues
