--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(beta_prior)
 export(bin_var)
 export(binary_cutoff)
 export(borrowing_details)
+export(borrowing_full)
+export(borrowing_hierarchical_commensurate)
+export(borrowing_none)
 export(cauchy_prior)
 export(check_cmdstan)
 export(check_cmdstanr)
