WIP pushing trimming to class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,8 @@ export(sim_outcome_list)
 export(sim_samplesize)
 export(sim_treatment_list)
 export(treatment_details)
+export(trim_cols)
+export(trim_rows)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
