--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -16,3 +16,11 @@ rebuild: .clean build
 .PHONY: install
 install: 
 	Rscript -e "devtools::build('../', vignettes = FALSE) |> install.packages(repos = NULL, build_vignettes = FALSE)"
+
+.PHONY: uninstall
+uninstall: 
+	Rscript -e "remove.packages('psborrow2')"
+	rm -rf ../../psborrow2_*.tar.gz
+
+.PHONY: reinstall
+reinstall: uninstall install
