create_alpha_string

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(check_cmdstanr)
 export(check_data_matrix_has_columns)
 export(cont_var)
 export(covariance_matrix)
+export(create_alpha_string)
 export(create_analysis_obj)
 export(create_baseline_object)
 export(create_data_matrix)
