--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(covariance_matrix)
 export(create_analysis_obj)
 export(create_baseline_object)
 export(create_data_matrix)
+export(create_data_simulation)
 export(create_simulation_obj)
 export(eval_constraints)
 export(exp_surv_dist)
