--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(create_analysis_obj)
 export(create_baseline_object)
 export(create_data_matrix)
 export(create_simulation_obj)
+export(create_tau_string)
 export(eval_constraints)
 export(exp_surv_dist)
 export(exponential_prior)
