--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(create_data_simulation)
 export(create_simulation_obj)
 export(create_tau_string)
 export(eval_constraints)
+export(event_dist)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
@@ -55,6 +56,7 @@ export(prior_half_normal)
 export(prior_normal)
 export(prior_poisson)
 export(rename_draws_covariates)
+export(set_enrollment)
 export(show_guide)
 export(sim_borrowing_list)
 export(sim_covariate_list)
