--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(prior_half_normal)
 export(prior_normal)
 export(prior_poisson)
 export(rename_draws_covariates)
+export(set_cut_off)
 export(set_enrollment)
 export(show_guide)
 export(sim_borrowing_list)
@@ -86,7 +87,9 @@ importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
+importFrom(methods,slot)
 importFrom(mvtnorm,rmvnorm)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
