--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,11 @@ export(create_data_matrix)
 export(create_data_simulation)
 export(create_simulation_obj)
 export(create_tau_string)
+export(cut_off_after_events)
+export(cut_off_after_first)
+export(cut_off_after_last)
+export(cut_off_none)
+export(enrollment_fixed)
 export(eval_constraints)
 export(event_dist)
 export(exp_surv_dist)
@@ -57,6 +62,7 @@ export(prior_normal)
 export(prior_poisson)
 export(rename_draws_covariates)
 export(set_cut_off)
+export(set_dropout)
 export(set_enrollment)
 export(show_guide)
 export(sim_borrowing_list)
@@ -84,6 +90,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,rect)
 importFrom(methods,callNextMethod)
+importFrom(methods,cbind2)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,show)
