--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(generate)
+export(generate.DataSimObject)
 export(get_cmd_stan_models)
 export(get_quantiles)
 export(get_results)
