--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Description: `psborrow2` is an R package for complex, innovative trial designs u
    other trial and borrowing characteristics (e.g. sample size, covariates) in
    a unified way; and second, `psborrow2` provides a user-friendly interface for applying dynamic borrowing
    on the study results handles the MCMC sampling on behalf of the user.
-URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/
+URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/index.html
 BugReports: https://github.com/Genentech/psborrow2/issues
 License: Apache License (>= 2)
 Encoding: UTF-8
