add show methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(half_normal_prior)
 export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
+export(null_event_dist)
 export(outcome_bin_logistic)
 export(outcome_cont_normal)
 export(outcome_surv_exponential)
