--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
 export(logistic_bin_outcome)
+export(make_model_string_model)
 export(mcmc_sample)
 export(normal_prior)
 export(outcome_bin_logistic)
