export as.data.frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(trim_rows)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
+exportMethods(as.data.frame)
 exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
