--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(generate)
 export(get_cmd_stan_models)
 export(get_quantiles)
 export(get_results)
+export(get_sim_data)
 export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
