--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,9 +37,9 @@ export(exponential_prior)
 export(gamma_prior)
 export(generate)
 export(get_cmd_stan_models)
+export(get_data)
 export(get_quantiles)
 export(get_results)
-export(get_sim_data)
 export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
