--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(exponential_prior)
 export(gamma_prior)
 export(generate)
 export(get_cmd_stan_models)
+export(get_data)
 export(get_quantiles)
 export(get_results)
 export(get_vars)
