--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(cut_off_after_events)
 export(cut_off_after_first)
 export(cut_off_after_last)
 export(cut_off_none)
+export(datasim_enrollment)
 export(enrollment_constant)
 export(eval_constraints)
 export(event_dist)
