--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as.data.frame,BaselineDataList)
 S3method(cbind,BaselineDataFrame)
 export(add_covariates)
+export(add_transformation)
 export(baseline_covariates)
 export(bernoulli_prior)
 export(beta_prior)
@@ -82,10 +83,12 @@ export(trim_rows)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
+exportMethods(add_transformation)
 exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
 import(future)
+import(methods)
 importFrom(Matrix,nearPD)
 importFrom(generics,generate)
 importFrom(graphics,axis)
@@ -93,12 +96,6 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,rect)
-importFrom(methods,callNextMethod)
-importFrom(methods,cbind2)
-importFrom(methods,is)
-importFrom(methods,new)
-importFrom(methods,show)
-importFrom(methods,slot)
 importFrom(mvtnorm,rmvnorm)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
