rename set transformations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(as.data.frame,BaselineDataList)
 S3method(cbind,BaselineDataFrame)
 export(add_covariates)
-export(add_transformation)
 export(baseline_covariates)
 export(bernoulli_prior)
 export(beta_prior)
@@ -69,6 +68,7 @@ export(rename_draws_covariates)
 export(set_cut_off)
 export(set_dropout)
 export(set_enrollment)
+export(set_transformations)
 export(show_guide)
 export(sim_borrowing_list)
 export(sim_covariate_list)
@@ -83,9 +83,9 @@ export(trim_rows)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
-exportMethods(add_transformation)
 exportMethods(generate)
 exportMethods(mcmc_sample)
+exportMethods(set_transformations)
 import(checkmate)
 import(future)
 import(methods)
