--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,11 +25,11 @@ export(create_data_matrix)
 export(create_data_simulation)
 export(create_simulation_obj)
 export(create_tau_string)
+export(custom_enrollment)
 export(cut_off_after_events)
 export(cut_off_after_first)
 export(cut_off_after_last)
 export(cut_off_none)
-export(datasim_enrollment)
 export(enrollment_constant)
 export(eval_constraints)
 export(event_dist)
