add DataSimEnrollment  constructor (#266)
* add DataSimEnrollment  constructor

* rename to `custom_enrollment()`

---------

Co-authored-by: Matt Secrest <secrestm@gene.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(create_data_matrix)
 export(create_data_simulation)
 export(create_simulation_obj)
 export(create_tau_string)
+export(custom_enrollment)
 export(cut_off_after_events)
 export(cut_off_after_first)
 export(cut_off_after_last)
