rename to create_event_dist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(create_analysis_obj)
 export(create_baseline_object)
 export(create_data_matrix)
 export(create_data_simulation)
+export(create_event_dist)
 export(create_simulation_obj)
 export(create_tau_string)
 export(custom_enrollment)
@@ -32,7 +33,6 @@ export(cut_off_after_last)
 export(cut_off_none)
 export(enrollment_constant)
 export(eval_constraints)
-export(event_dist)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
