--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -20,10 +20,13 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          extra-repositories: "https://mc-stan.org/r-packages/"
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, github::stan-dev/cmdstanr
+          extra-packages: |
+            any::covr
+            any::cmdstanr
           needs: coverage
 
       - name: Install and unpack cmdstan
