--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: psborrow2
 Title: An R Package for Bayesian Dynamic Borrowing Simulation Study and Analysis
-Version: 0.0.2.9001
+Version: 0.0.3
 Authors@R: c(
    person(
       given = "Matt",
@@ -29,14 +29,14 @@ Description: `psborrow2` is an R package for complex, innovative trial designs u
    other trial and borrowing characteristics (e.g. sample size, covariates) in
    a unified way; and second, `psborrow2` provides a user-friendly interface for applying dynamic borrowing
    on the study results handles the MCMC sampling on behalf of the user.
-URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/
+URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/index.html
 BugReports: https://github.com/Genentech/psborrow2/issues
 License: Apache License (>= 2)
 Encoding: UTF-8
 Depends:
     R (>= 3.5.0)
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Config/testthat/edition: 3
 Imports:
     checkmate,
@@ -47,7 +47,8 @@ Imports:
     generics,
     Matrix,
     mvtnorm,
-    future
+    future,
+    simsurv
 Suggests:
     cmdstanr,
     survival,
@@ -61,7 +62,6 @@ Suggests:
     rmarkdown,
     bayesplot,
     matrixcalc,
-    simsurv,
     WeightIt,
     MatchIt,
     BayesPPD,
@@ -132,6 +132,7 @@ Collate:
     'sim_is_null_effect_covered.R'
     'sim_is_true_effect_covered.R'
     'sim_samplesize.R'
+    'simulate_data_baseline.R'
     'simulate_data.R'
     'simvar_class.R'
     'trim_data_matrix.R'
