--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(get_cmd_stan_models)
 export(get_data)
 export(get_quantiles)
 export(get_results)
+export(get_stan_code)
 export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
