--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Type: Package
 Package: psborrow2
-Title: An R Package for Bayesian Dynamic Borrowing Simulation Study and Analysis
-Version: 0.0.3.1
+Title: Bayesian Dynamic Borrowing Analysis and Simulation
+Version: 0.0.3.2
 Authors@R: c(
    person(
       given = "Matt",
       family = "Secrest",
-      role = c("cre"),
+      role = c("aut", "cre"),
+      comment = c(ORCID = "0000-0002-0939-4902"),
       email = "secrestm@gene.com"
       ),
    person(
@@ -20,21 +21,29 @@ Authors@R: c(
       family = "Gower-Page",
       role = c("ctb"),
       email = "craig.gower-page@roche.com"
-      )
+      ),
+   person("Genentech, Inc.", role = c("cph", "fnd"))
    )
-Description: `psborrow2` is an R package for complex, innovative trial designs using
-   Bayesian dynamic borrowing using the hierarchical commensurate prior approach. `psborrow2` has two main goals:
-   First, `psborrow2` facilitates simulation studies that compare different borrowing
-   parameters (e.g. full borrowing, no borrowing, dynamic borrowing) and
-   other trial and borrowing characteristics (e.g. sample size, covariates) in
-   a unified way; and second, `psborrow2` provides a user-friendly interface for applying dynamic borrowing
-   on the study results handles the MCMC sampling on behalf of the user.
+Description: Bayesian dynamic borrowing is an approach to incorporating external
+   data to supplement a randomized, controlled trial analysis in which
+   external data are incorporated in a dynamic way (e.g., based on similarity
+   of outcomes); see Viele et al (2013) <doi:10.1002/pst.1589> for an overview.
+   This package implements the hierarchical commensurate prior approach to dynamic borrowing
+   as described in Hobbes et al (2011) <doi:10.1111/j.1541-0420.2011.01564.x>.
+   There are three main functionalities. First, 'psborrow2' provides a user-friendly 
+   interface for applying dynamic borrowing on the study results handles the MCMC
+   sampling on behalf of the user. Second, 'psborrow2' provides a simulation
+   framework to compare different borrowing parameters (e.g. full borrowing, no
+   borrowing, dynamic borrowing) and other trial and borrowing characteristics
+   (e.g. sample size, covariates) in a unified way. Third, 'psborrow2' provides
+   a set of functions to generate data for simulation studies, and also allows
+   the user to specify their own data generation process.
 URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/index.html
 BugReports: https://github.com/Genentech/psborrow2/issues
-License: Apache License (>= 2)
+License: Apache License 2.0
 Encoding: UTF-8
 Depends:
-    R (>= 3.5.0)
+    R (>= 4.1.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Config/testthat/edition: 3
