--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,6 +22,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      _R_CHECK_FORCE_SUGGESTS_: "0" # CRAN sets to false 
     steps:
       - uses: actions/checkout@v2
 
@@ -43,9 +44,13 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
 
+      - name: R CMD check before cmdstanr installed
+        uses: r-lib/actions/check-r-package@v2
+
       - name: Install and unpack cmdstan
         run: |
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
 
-      - uses: r-lib/actions/check-r-package@v2
+      - name: R CMD check after cmdstanr installed
+        uses: r-lib/actions/check-r-package@v2
