--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck, github::stan-dev/cmdstanr
+          extra-packages: rcmdcheck
 
       - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
@@ -49,6 +49,7 @@ jobs:
 
       - name: Install and unpack cmdstan
         run: |
+          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
 
