--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,6 +37,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: rcmdcheck
+          dependencies: '"hard"'
 
       - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
@@ -49,7 +50,7 @@ jobs:
 
       - name: Install and unpack cmdstan
         run: |
-          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
+          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption()))"
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
 
