--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,13 +27,13 @@ Authors@R: c(
 Description: Bayesian dynamic borrowing is an approach to incorporating external
    data to supplement a randomized, controlled trial analysis in which
    external data are incorporated in a dynamic way (e.g., based on similarity
-   of outcomes); see Viele et al (2013) <doi:10.1002/pst.1589> for an overview.
+   of outcomes); see Viele 2013 \doi{10.1002/pst.1589} for an overview.
    This package implements the hierarchical commensurate prior approach to dynamic borrowing
-   as described in Hobbes et al (2011) <doi:10.1111/j.1541-0420.2011.01564.x>.
+   as described in Hobbes 2011 \doi{10.1111/j.1541-0420.2011.01564.x}.
    There are three main functionalities. First, 'psborrow2' provides a user-friendly 
-   interface for applying dynamic borrowing on the study results handles the MCMC
-   sampling on behalf of the user. Second, 'psborrow2' provides a simulation
-   framework to compare different borrowing parameters (e.g. full borrowing, no
+   interface for applying dynamic borrowing on the study results handles the Markov Chain
+   Monte Carlo sampling on behalf of the user. Second, 'psborrow2' provides a 
+   simulation framework to compare different borrowing parameters (e.g. full borrowing, no
    borrowing, dynamic borrowing) and other trial and borrowing characteristics
    (e.g. sample size, covariates) in a unified way. Third, 'psborrow2' provides
    a set of functions to generate data for simulation studies, and also allows
