--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,6 +22,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      _R_CHECK_FORCE_SUGGESTS_: "0" # CRAN sets to false 
     steps:
       - uses: actions/checkout@v2
 
@@ -35,7 +36,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck, github::stan-dev/cmdstanr
+          extra-packages: rcmdcheck, survival, flexsurv, testthat, usethis, vdiffr, tibble, xml2, knitr, rmarkdown, bayesplot, matrixcalc, WeightIt, MatchIt, BayesPPD, ggsurvfit, gbm, ggplot2, cobalt, table1, gt, gtsummary
+          dependencies: '"hard"'
 
       - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
@@ -43,9 +45,20 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
 
-      - name: Install and unpack cmdstan
+      - name: R CMD check before cmdstanr installed
+        uses: r-lib/actions/check-r-package@v2
+
+      - name: Install cmdstanr but not cmdstan
+        run: |
+          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
+
+      - name: R CMD check after cmdstanr installed but before cmdstan
+        uses: r-lib/actions/check-r-package@v2
+      
+      - name: Install cmdstan
         run: |
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
 
-      - uses: r-lib/actions/check-r-package@v2
+      - name: R CMD check after cmdstanr and cmdstan are installed
+        uses: r-lib/actions/check-r-package@v2
