--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
+exportMethods(c)
 exportMethods(generate)
 exportMethods(mcmc_sample)
 exportMethods(set_transformations)
