re-expose make_model_string_model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
 export(logistic_bin_outcome)
+export(make_model_string_model)
 export(mcmc_sample)
 export(normal_prior)
 export(null_event_dist)
