--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,8 +45,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
 
-      # Set up MSYS2 and update pacman
-      - name: Set up MSYS2 and install tools
+        - name: Set up MSYS2 and install tools
         if: runner.os == 'Windows'
         uses: msys2/setup-msys2@v2
         with:
@@ -54,10 +53,9 @@ jobs:
           install: >-
             base-devel
             mingw-w64-x86_64-toolchain
-            mingw-w64-i686-make  # mingw32-make equivalent
-            mingw-w64-x86_64-gcc  # g++ equivalent for 64-bit, replace with mingw-w64-i686-gcc for 32-bit
+            mingw-w64-i686-make  # Install mingw32-make equivalent for MinGW 32-bit
+            mingw-w64-x86_64-gcc  # Install g++ for 64-bit, use mingw-w64-i686-gcc for 32-bit if needed
           path-type: inherit
-
 
       - name: R CMD check before cmdstanr installed
         uses: r-lib/actions/check-r-package@v2
