--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,9 +53,10 @@ jobs:
           install: >-
             base-devel
             mingw-w64-x86_64-toolchain
-            mingw-w64-i686-make  # Install mingw32-make equivalent for MinGW 32-bit
-            mingw-w64-x86_64-gcc  # Install g++ for 64-bit, use mingw-w64-i686-gcc for 32-bit if needed
+            mingw-w64-i686-make
+            mingw-w64-x86_64-gcc
           path-type: inherit
+
 
       - name: R CMD check before cmdstanr installed
         uses: r-lib/actions/check-r-package@v2
