Tweaks for cran (#278)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,9 @@ Authors@R: c(
 Description: Bayesian dynamic borrowing is an approach to incorporating external
    data to supplement a randomized, controlled trial analysis in which
    external data are incorporated in a dynamic way (e.g., based on similarity
-   of outcomes); see Viele 2013 \doi{10.1002/pst.1589} for an overview.
+   of outcomes); see Viele 2013 <doi:10.1002/pst.1589> for an overview.
    This package implements the hierarchical commensurate prior approach to dynamic borrowing
-   as described in Hobbes 2011 \doi{10.1111/j.1541-0420.2011.01564.x}.
+   as described in Hobbes 2011 <doi:10.1111/j.1541-0420.2011.01564.x>.
    There are three main functionalities. First, 'psborrow2' provides a user-friendly 
    interface for applying dynamic borrowing on the study results handles the Markov Chain
    Monte Carlo sampling on behalf of the user. Second, 'psborrow2' provides a 
@@ -37,7 +37,9 @@ Description: Bayesian dynamic borrowing is an approach to incorporating external
    borrowing, dynamic borrowing) and other trial and borrowing characteristics
    (e.g. sample size, covariates) in a unified way. Third, 'psborrow2' provides
    a set of functions to generate data for simulation studies, and also allows
-   the user to specify their own data generation process.
+   the user to specify their own data generation process. This package is designed to 
+   use the sampling functions from 'cmdstanr' which can be installed from
+   <https://mc-stan.org/r-packages/>.
 URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/index.html
 BugReports: https://github.com/Genentech/psborrow2/issues
 License: Apache License 2.0
