--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,21 +18,18 @@ export(check_cmdstanr)
 export(check_data_matrix_has_columns)
 export(cont_var)
 export(covariance_matrix)
-export(create_alpha_string)
 export(create_analysis_obj)
 export(create_baseline_object)
 export(create_data_matrix)
 export(create_data_simulation)
 export(create_event_dist)
 export(create_simulation_obj)
-export(create_tau_string)
 export(custom_enrollment)
 export(cut_off_after_events)
 export(cut_off_after_first)
 export(cut_off_after_last)
 export(cut_off_none)
 export(enrollment_constant)
-export(eval_constraints)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
@@ -81,11 +78,10 @@ export(sim_outcome_list)
 export(sim_samplesize)
 export(sim_treatment_list)
 export(treatment_details)
-export(trim_cols)
-export(trim_rows)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
+exportMethods(c)
 exportMethods(generate)
 exportMethods(mcmc_sample)
 exportMethods(set_transformations)
