--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,7 +20,7 @@ navbar:
       href: https://github.com/Genentech/psborrow2
 
 articles:
-  - title: All vignettes
+  - title: Core tutorials
     desc: ~
     contents:
       - "`psborrow2`"
@@ -30,3 +30,7 @@ articles:
       - "`propensity_scores`"
       - "`weighting`"
       - "`data_simulation`"
+  - title: Deep dive into matching/weighting
+    desc: ~
+    contents:
+      - "articles/sandwich"
