--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,3 +34,5 @@ articles:
     desc: ~
     contents:
       - "articles/sandwich"
+      - "articles/match_weight_01_methods"
+      - "articles/match_weight_02_application"
