--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -1,21 +1,10 @@
-# For top-level vignettes
-TOP_SRCS = $(wildcard original/_*.Rmd)
-TOP_OBJS = $(patsubst original/_%.Rmd, %.Rmd, $(TOP_SRCS))
+SRCS = $(wildcard original/*.Rmd)
+OBJS = $(patsubst original/_%, %, $(SRCS))
 
-# For articles
-ART_SRCS = $(wildcard original/articles/_*.Rmd)
-ART_OBJS = $(patsubst original/articles/_%.Rmd, articles/_%.Rmd, $(ART_SRCS))
+build: $(OBJS)
 
-# Default rule to build all objects
-build: $(TOP_OBJS) $(ART_OBJS)
-
-# Rule to build top-level vignettes
 %.Rmd: original/_%.Rmd
 	Rscript -e "knitr::opts_chunk[['set']]('fig.path' = 'figure-$*-'); knitr::knit('original/_$*.Rmd', output = '$*.Rmd')"
-
-# Rule to build articles
-articles/%.Rmd: original/articles/_%.Rmd
-	Rscript -e "knitr::opts_chunk[['set']]('fig.path' = 'articles/figure-$*-'); knitr::knit('original/articles/_$*.Rmd', output = 'articles/$*.Rmd')"
 
 .clean: 
 	rm -f $(OBJS)
