--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,19 @@ Authors@R: c(
       role = c("ctb"),
       email = "craig.gower-page@roche.com"
       ),
-   person("Genentech, Inc.", role = c("cph", "fnd")),
-   person("Eli Lilly & Company", role = c("ctb"))
+   person(
+      given = "Manoj",
+      family = "Khanal",
+      role = c("ctb"),
+      email = "khanal_manoj@lilly.com"
+   ),
+   person(
+      given = "Mingyang",
+      family = "Shan",
+      role = c("ctb"),
+      email = "mingyang.shan@lilly.com"
+   ),
+   person("Genentech, Inc.", role = c("cph", "fnd"))
    )
 Description: Bayesian dynamic borrowing is an approach to incorporating external
    data to supplement a randomized, controlled trial analysis in which
