Incorporate Lilly articles (#286)
* allow articles in git

* sandwich

* no changes

* wip before major updates

* wip working...

* works

* wip

* wip updating

* updates before editing

* rm data with weights

* first vignette

* able to rerun everything

* finished pass

* Update .gitignore

Co-authored-by: Isaac Gravestock <83659704+gravesti@users.noreply.github.com>

* Update vignettes/references.bib

Co-authored-by: Isaac Gravestock <83659704+gravesti@users.noreply.github.com>

* add lilly as contributor

* DESC update

---------

Co-authored-by: Isaac Gravestock <83659704+gravesti@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@
 *.sas.txt
 *~
 /.project
-articles
 devel/*
 develop/
 doc
@@ -36,3 +35,4 @@ coverage.*
 /Meta/
 inst/doc
 node_modules
+vignettes/original/data_with_weights.csv
