--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -31,3 +31,5 @@ develop
 ^vignettes/original$
 ^vignettes/Makefile$
 ^node_modules$
+^vignettes/match_weight_01_methods.Rmd$
+^vignettes/match_weight_02_application.Rmd$
