--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,15 +16,15 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
+          - { os: macOS-latest, r: "release" }
+          - { os: windows-latest, r: "release" }
+          - { os: ubuntu-latest, r: "release" }
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      _R_CHECK_FORCE_SUGGESTS_: "0" # CRAN sets to false 
+      _R_CHECK_FORCE_SUGGESTS_: "0" # CRAN sets to false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -55,7 +55,7 @@ jobs:
 
       - name: R CMD check after cmdstanr installed but before cmdstan
         uses: r-lib/actions/check-r-package@v2
-      
+
       - name: Install cmdstan
         run: |
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
