--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(null_event_dist)
 export(outcome_bin_logistic)
 export(outcome_cont_normal)
 export(outcome_surv_exponential)
+export(outcome_surv_piecewise_exp)
 export(outcome_surv_weibull_ph)
 export(plot)
 export(plot_pdf)
