--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,14 +54,14 @@ Description: Bayesian dynamic borrowing is an approach to incorporating external
    of outcomes); see Viele 2013 <doi:10.1002/pst.1589> for an overview.
    This package implements the hierarchical commensurate prior approach to dynamic borrowing
    as described in Hobbes 2011 <doi:10.1111/j.1541-0420.2011.01564.x>.
-   There are three main functionalities. First, 'psborrow2' provides a user-friendly 
+   There are three main functionalities. First, 'psborrow2' provides a user-friendly
    interface for applying dynamic borrowing on the study results handles the Markov Chain
-   Monte Carlo sampling on behalf of the user. Second, 'psborrow2' provides a 
+   Monte Carlo sampling on behalf of the user. Second, 'psborrow2' provides a
    simulation framework to compare different borrowing parameters (e.g. full borrowing, no
    borrowing, dynamic borrowing) and other trial and borrowing characteristics
    (e.g. sample size, covariates) in a unified way. Third, 'psborrow2' provides
    a set of functions to generate data for simulation studies, and also allows
-   the user to specify their own data generation process. This package is designed to 
+   the user to specify their own data generation process. This package is designed to
    use the sampling functions from 'cmdstanr' which can be installed from
    <https://mc-stan.org/r-packages/>.
 URL: https://github.com/Genentech/psborrow2, https://genentech.github.io/psborrow2/index.html
@@ -145,8 +145,10 @@ Collate:
     'make_analysis_object_list.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
+    'outcome_surv_piecewise_exponential.R'
     'make_model_string_model.R'
     'make_model_string_parameters.R'
+    'make_model_string_transf_data.R'
     'make_model_string_transf_params.R'
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
