--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(get_stan_code)
 export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
+export(load_and_interpolate_stan_model)
 export(logistic_bin_outcome)
 export(make_model_string_model)
 export(mcmc_sample)
