--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -142,16 +142,14 @@ Collate:
     'simulation_class.R'
     'create_simulation_obj.R'
     'data.R'
-    'make_analysis_object_list.R'
-    'make_model_string_data.R'
-    'make_model_string_functions.R'
-    'make_model_string_model.R'
-    'make_model_string_parameters.R'
-    'make_model_string_transf_params.R'
-    'mcmc_sample.R'
-    'mcmc_simulation_result.R'
+    'get_prior_string_covariates.R'
     'prior_half_cauchy.R'
     'outcome_cont_normal.R'
+    'load_and_interpolate_stan_model.R'
+    'load_stan_file.R'
+    'make_analysis_object_list.R'
+    'mcmc_sample.R'
+    'mcmc_simulation_result.R'
     'package.R'
     'prepare_stan_data_inputs.R'
     'prior_bernoulli.R'
