--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -124,6 +124,7 @@ Collate:
     'borrowing_full.R'
     'borrowing_hierarchical_commensurate.R'
     'borrowing_none.R'
+    'cast_mat_to_long_pem.R'
     'check_data_matrix_has_columns.R'
     'cmdstan.R'
     'create_analysis_obj.R'
@@ -150,6 +151,7 @@ Collate:
     'make_analysis_object_list.R'
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
+    'outcome_surv_pem.R'
     'package.R'
     'prepare_stan_data_inputs.R'
     'prior_bernoulli.R'
