prototype case weights

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bernoulli_prior)
 export(beta_prior)
 export(bin_var)
 export(binary_cutoff)
+export(borrowing_case_weights)
 export(borrowing_details)
 export(borrowing_full)
 export(borrowing_hierarchical_commensurate)
