--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,7 +71,7 @@ Encoding: UTF-8
 Depends:
     R (>= 4.1.0)
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 Imports:
     checkmate,
@@ -121,10 +121,12 @@ Collate:
     'borrowing_class.R'
     'outcome_class.R'
     'analysis_class.R'
+    'borrowing_case_weights.R'
     'borrowing_details.R'
     'borrowing_full.R'
     'borrowing_hierarchical_commensurate.R'
     'borrowing_none.R'
+    'case_weight_helpers.R'
     'cast_mat_to_long_pem.R'
     'check_data_matrix_has_columns.R'
     'cmdstan.R'
