--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,11 +97,20 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,rect)
 importFrom(mvtnorm,rmvnorm)
+importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
+importFrom(stats,density)
 importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
+importFrom(stats,poisson)
+importFrom(stats,predict)
+importFrom(stats,reformulate)
+importFrom(stats,rexp)
 importFrom(stats,setNames)
+importFrom(stats,update)
+importFrom(stats,vcov)
 importFrom(utils,head)
 importFrom(utils,packageVersion)
