import survival (already imported simsurv)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -83,10 +83,10 @@ Imports:
     Matrix,
     mvtnorm,
     future,
-    simsurv
+    simsurv,
+    survival
 Suggests:
     cmdstanr,
-    survival,
     flexsurv,
     eha,
     testthat (>= 3.0),
